feat: add static serve

--- a/Software/Frontend/docker-compose.prod.yml
+++ b/Software/Frontend/docker-compose.prod.yml
@@ -24,10 +24,13 @@ services:
 
   nginx:
     build: ./nginx
+    volumes:
+      - static_volume:/home/app/web/staticfiles
     ports:
       - 1337:80
     depends_on:
       - web
 
 volumes:
-  postgres_data:    
+  postgres_data:   
+  static_volume: 
