--- a/Software/Frontend/nginx/nginx.conf
+++ b/Software/Frontend/nginx/nginx.conf
@@ -1,7 +1,5 @@
 upstream django_web {
     server web:8000;
-    server localhost:8000;
-    server 127.0.0.1:8000;
 }
 
 server {
@@ -14,7 +12,7 @@ server {
         proxy_set_header Host $host;
         proxy_redirect off;
     }
-    location /static/ {
-        alias /home/app/web/staticfiles/;
-    }
+    # location /static/ {
+    #     alias /home/app/web/staticfiles/;
+    # }
 }
