--- a/Software/Frontend/docker-compose.prod.yml
+++ b/Software/Frontend/docker-compose.prod.yml
@@ -1,5 +1,5 @@
 version: "3.9"
-   
+
 services:
   # db:
   #   image: nouchka/sqlite3:latest
@@ -8,7 +8,13 @@ services:
     build:
       context: ./Host_Pathogen_Interaction
       dockerfile: Dockerfile.prod
-    command: gunicorn Host_Pathogen_Interaction.wsgi:application --bind 0.0.0.0:8000
+    volumes:
+      - static_volume:/home/app/web/staticfiles
+    # command: gunicorn Host_Pathogen_Interaction.wsgi:application --bind 0.0.0.0:8000
+    command: sh -c "python manage.py makemigrations && python manage.py migrate && python manage.py createsuperuser --noinput  && gunicorn Host_Pathogen_Interaction.wsgi:application --bind 0.0.0.0:8000"
+      # gunicorn Host_Pathogen_Interaction.wsgi:application --bind 0.0.0.0:8000
+      # sh -c "python manage.py makemigrations && python manage.py migrate && 
+      # python manage.py createsuperuser --noinput  && gunicorn Host_Pathogen_Interaction.wsgi:application --bind 0.0.0.0:8000"    
     expose:
       - 8000
     env_file:
@@ -32,5 +38,5 @@ services:
       - web
 
 volumes:
-  postgres_data:   
-  static_volume: 
+  postgres_data:
+  static_volume:
