--- a/Software/Frontend/nginx/nginx.conf
+++ b/Software/Frontend/nginx/nginx.conf
@@ -6,13 +6,17 @@ server {
 
     listen 80;
 
+    
+    
     location / {
         proxy_pass http://django_web/;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
-    # location /static/ {
-    #     alias /home/app/web/staticfiles/;
-    # }
+
+    location /static/ {
+        alias /home/app/web/staticfiles/;
+    }
+    
 }
