--- a/Software/Frontend/.env.dev
+++ b/Software/Frontend/.env.dev
@@ -7,3 +7,7 @@ SQL_USER=hello_django
 SQL_PASSWORD=hello_django
 SQL_HOST=db
 SQL_PORT=5432
+
+DJANGO_SUPERUSER_EMAIL=thanujan96@gmail.com
+DJANGO_SUPERUSER_PASSWORD=secret1
+DJANGO_SUPERUSER_USERNAME=admin 
